src.1/objects/Flow_Risk_Cancel_Reasons__mdt.object
<CustomObject>
    <description>Flow picklist dependencies.</description>
    <label>Flow Risk/Cancel Reason</label>
    <pluralLabel>Flow Risk/Cancel Reasoons</pluralLabel>
    <fields>
        <fullName>Controlling_field_API_Name__c</fullName>
        <label>Controlling field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_field_Value__c</fullName>
        <label>Controlling field Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_field_API_Name__c</fullName>
        <label>Dependent field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_field_Value__c</fullName>
        <label>Dependent field Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_for_Dependent_Picklist__c</fullName>
        <label>Object Name for Dependent Picklist</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>